# learning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
googletests/: test.c
src/: functions.c  main.cpp
